JOIN/src/styles/_mediaQueries.scss
@mixin down-xs {
  @media (max-width: 560px) {
    @content;
  }
}

@mixin down-sm {
  @media (max-width: 640px) {
    @content;
  }
}

@mixin down-md {
  @media (max-width: 700px) {
    @content;
  }
}

@mixin down-lg {
  @media (max-width: 768px) {
    @content;
  }
}

@mixin down-xl {
  @media (max-width: 900px) {
    @content;
  }
}

@mixin down-xxl {
  @media (max-width: 1024px) {
    @content;
  }
}

@mixin up-lg {
  @media (min-width: 769px) {
    @content;
  }
}

@mixin up-xxl {
  @media (min-width: 1025px) {
    @content;
  }
}

@mixin up-wide {
  @media (min-width: 1440px) {
    @content;
  }
}

@mixin up-ultra {
  @media (min-width: 1920px) {
    @content;
  }
}

